[Update] 파이어베이스 호스팅 적용

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,22 @@
 # production
 /build
 
+### react ###
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
+
+### Firebase ###
+.idea
+**/node_modules/*
+**/.firebaserc
+
+### Firebase Patch ###
+.runtimeconfig.json
+.firebase/
+
 # misc
 .DS_Store
 .env.local
